--- a/asr-client-py/.env
+++ b/asr-client-py/.env
@@ -27,3 +27,8 @@ DO_EMOTION_CLASS=false
 
 # Enable continuos mode
 CONTINUOS_MODE=true
+# Do cancel after n chunks
+#DO_CANCEL=30
+
+TIMEOUT=20
+CHUNK_SIZE=160
