Corrige real time

--- a/asr-client-py/.env
+++ b/asr-client-py/.env
@@ -20,6 +20,9 @@ LANGUAGE_MODEL_URI="builtin:slm/callcenter-small"
 # Audio for recognition
 AUDIO_NAME="bank-transfira-8k.wav"
 
+# Audio encoding
+ENCODING="RAW"
+
 # Enable classification
 DO_AGE_CLASS=false
 DO_GENDER_CLASS=false
@@ -31,4 +34,5 @@ CONTINUOS_MODE=true
 #DO_CANCEL=30
 
 TIMEOUT=20
-CHUNK_SIZE=160
+CHUNK_INTERVAL=0.1
+CHUNK_SIZE=800
