Remove código desnecessário

--- a/asr-client-py/.env
+++ b/asr-client-py/.env
@@ -7,15 +7,15 @@ USE_TLS=false
 #USE_TLS=${USE_TLS}
 
 # Metadata to be added during connection if formar <par><value>
-#METADATA="x-asr-grpc:general"
-METADATA="x-asr-grpc:call"
+METADATA="x-asr-grpc:general"
+#METADATA="x-asr-grpc:call"
 
 # Certificate file for secure connections
 CERTIFICATE_FILE="keys/asrgrpc.pem"
 
 # Language model URI
 LANGUAGE_MODEL_URI="builtin:slm/general"
-LANGUAGE_MODEL_URI="builtin:slm/callcenter-small"
+#LANGUAGE_MODEL_URI="builtin:slm/callcenter-small"
 
 # Audio for recognition
 AUDIO_NAME="bank-transfira-8k.wav"
@@ -29,10 +29,14 @@ DO_GENDER_CLASS=false
 DO_EMOTION_CLASS=false
 
 # Enable continuos mode
-CONTINUOS_MODE=true
+CONTINUOUS_MODE=false
+
 # Do cancel after n chunks
 #DO_CANCEL=30
 
-TIMEOUT=20
+# Control audio chuncks for streaming recognize
 CHUNK_INTERVAL=0.1
 CHUNK_SIZE=800
+
+# gRPC Timeout
+TIMEOUT=20
