Sem intervalor entre chunks

--- a/asr-client-py/.env
+++ b/asr-client-py/.env
@@ -21,7 +21,7 @@ LANGUAGE_MODEL_URI="builtin:slm/general"
 AUDIO_NAME="bank-transfira-8k.wav"
 
 # Audio encoding
-ENCODING="RAW"
+#ENCODING="RAW"
 
 # Enable classification
 DO_AGE_CLASS=false
@@ -34,8 +34,10 @@ CONTINUOUS_MODE=false
 # Do cancel after n chunks
 #DO_CANCEL=30
 
-# Control audio chuncks for streaming recognize
-CHUNK_INTERVAL=0.1
+# Control audio chunks for streaming recognize
+# to simulate realtime audio use interval = 0.1s
+# and raw audio
+CHUNK_INTERVAL=0.00
 CHUNK_SIZE=800
 
 # gRPC Timeout
