--- a/asr-client-py/.env
+++ b/asr-client-py/.env
@@ -6,7 +6,7 @@ SERVER_URL="asr.cpqd.com.br:80"
 USE_TLS=false
 #USE_TLS=${USE_TLS}
 
-# Metadata to be added during connection if formar <par><value>
+# Metadata to be added during connection if format <par>:<value>
 METADATA="x-asr-grpc:general"
 #METADATA="x-asr-grpc:call"
 
