Corrige server url

--- a/asr-client-py/.env
+++ b/asr-client-py/.env
@@ -1,6 +1,5 @@
 # ASR Server URL
-SERVER_URL="asr.cpqd.com.br:80"
-#SERVER_URL=${SERVER_URL}
+SERVER_URL=${SERVER_URL}
 
 # Use a secure channel in connection
 USE_TLS=false
