Retrieve token automatically

--- a/asr-client-py/.env
+++ b/asr-client-py/.env
@@ -41,3 +41,11 @@ CHUNK_SIZE=800
 
 # gRPC Timeout
 TIMEOUT=20
+
+# Manual token assign
+SL_TOKEN=""
+
+# Or retrieve token from
+#TOKEN_URL="https://speechp.cpqd.com.br/auth/token"
+TOKEN_USER=""
+TOKEN_PASSWORD=""
