--- a/asr-client-nodejs/package.json
+++ b/asr-client-nodejs/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@grpc/grpc-js": "^1.8.12"
+    "@grpc/grpc-js": "^1.13.4",
+    "mic": "^2.1.2"
   }
 }
