[DION-7] Rename directory

--- a/asr-client-nodejs/streamingRecognize/package.json
+++ b/asr-client-nodejs/streamingRecognize/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "mic-visualizer",
+  "name": "streamingRecognize",
   "version": "1.0.0",
-  "description": "Mic waveform served with Node.js",
+  "description": "Voice recognition and diarization with node.js",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "ws-streamingRecognize.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mic": "^2.1.2"
   },
   "keywords": [],
   "author": "",
